--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,7 @@
 html, body{
   height: 100%;
+  background-color: transparent;
   margin: 0;
-}
-html {
-  background: url('dj.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 body{
   margin: auto;
@@ -19,17 +13,8 @@ body{
 }
 .jumbotron{
   position: absolute;
+  opacity: 1;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
-/*.container{
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}*/
-/*.container{
-  display: table-cell;
-  vertical-align: middle;
-}*/
